<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZorgZaak</string>
    <string name="title_section1">Menu</string>
    <string name="title_section2">Invoeren</string>
    <string name="title_section3">Weergeven</string>
    <string name="title_section4">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Invoeren</string>
    <string name="button2">Weergeven</string>
    <string name="button3">Agenda</string>
    <string name="verzend_gegevens">Verzend gegevens</string>
    <string name="commentaar">Voer eventueel commentaar in:</string>
    <string name="waarde">"Voer de waarde in: "</string>
    <string name="startcalendar">startCalendar</string>
    <string name="hello_world">Hello World</string>
    <string name="naam">Voer hier je gebruikers-ID in</string>
    <string name="wachtwoord">Voer hier je wachtwoord in</string>
    <string name="login_button">login button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>
