<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/waardeInvoer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" 
        android:hint="@string/waarde"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"  >

        <requestFocus />
        
        </EditText>

    <EditText
        android:id="@+id/commentaarInvoer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/commentaar"
        android:paddingBottom="12dp"
        android:paddingTop="12dp" />

    <Button
        android:id="@+id/verzendGegevens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/verzend_gegevens" />

</LinearLayout>
